fixtures/valid/layered-tasks/src/features/tasks/routes/create.ts
import { createTask } from "../server/create-task.js";

void createTask;
