fixtures/invalid/module-dynamic-import-unsupported/src/features/tasks/browser/app.ts
const runtimeTarget = "../server/secret.js";
void import(runtimeTarget);
